#Nmap Changelog ($Id$); -*-text-*-

o If a host times out, the XML <host> element will have the attribute
  timedout="true" and the host's timing info (srtt etc.) will still be printed.

o [GH#2269] Fix an issue with -sU where payload data went out-of-scope before
  it was used, causing corrupted payloads to be sent. [Mariusz Ziulek]

o [GH#2257] Fix an issue in addrset matching that was causing all targets to be
  excluded if the --excludefile listed a CIDR range that contains an earlier,
  smaller CIDR range. [Daniel Miller]

o [NSE][GH#2237] Prevent the ssl-* NSE scripts from probing ports that were
  excluded from version scan, usually 9100-9107, since JetDirect will print
  anything sent to these ports. [Daniel Miller]

o Nmap's retransmission limits were preventing some UDP payloads from being
  tried with -sU and -PU. Now, Nmap ensures each payload for a particular port
  is sent at least once, unless --max-retries prevents it. [Daniel Miller]

o [GH#2206] Nmap no longer produces cryptic message "Failed to convert
  source address to presentation format" when unable to find useable route
  to the target. [nnposter]

o [Ncat][GH#2202] Use safety-checked versions of FD_* macros to abort early if
  number of connections exceeds FD_SETSIZE. [Pavel Zhukov]

o [Ncat] Connections proxied via SOCKS4/SOCKS5 were intermittently dropping
  server data sent right after the connection got established, such as port
  banners. [Sami Pönkänen]

o Nmap will now output a list of port numbers for each "ignored" state in the
  "extrareasons" element in XML output. The "All X ports" and "Not shown:" lines
  in normal output have been changed slightly to provide more detail. [Daniel Miller]

o New script port-states will print a list of ports that were found in each
  state, including states that were summarized as "Not shown: X closed ports"
  [Daniel Miller]

o New Nmap option --unique will prevent Nmap from scanning the same IP address